adds convert celcius to fahrenheit

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       />
       <h1>Free Code Camp's Basic Algorithm Scripting Solutions</h1>
     </header>
-    <article>
+    <article class="main-article">
       <ul>
-        <li>1</li>
+        <li><a href="./solutions/celcius_to_fahrenheit/">Convert Celcius to Fahrenheit</a></li>
         <li>2</li>
         <li>3</li>
       </ul>
