adds factorialize a number

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Donald Brown" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Code Camp Basic Algorithm Scripting</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
@@ -21,8 +21,8 @@
     <article class="main-article">
       <ul>
         <li><a href="./solutions/celcius_to_fahrenheit/">Convert Celcius to Fahrenheit</a></li>
-        <li>2</li>
-        <li>3</li>
+        <li><a href="./solutions/reverse_a_string/">Reverse a String</a></li>
+        <li><a href="./solutions/factorolize_a_number/">Factorialize a Number</a></li>
       </ul>
     </article>
   </body>
