--- a/solutions/celcius_to_fahrenheit/index.html
+++ b/solutions/celcius_to_fahrenheit/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Convert Celsius to Fahrenheit Solution" />
-  <meta name="keywords" content="Algorithms, Free Code Camp, JavaScript" />
+  <meta name="keywords" content="Algorithms, Free Code Camp, JavaScript, convert celsius to fahrenheit" />
   <meta name="author" content="Donald Brown" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Convert Celsius to Fahrenheit</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/themes/prism-coy.min.css" integrity="sha256-VcuSs+n31yebPlEcehu6PvnidJ808ScFBsK8+tJKX+Q=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../../style.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
+  <link rel="stylesheet" href="../../styles/solutions.css">
 </head>
 <body>
   <article class="solution-article">
