--- a/solutions/reverse_a_string/index.html
+++ b/solutions/reverse_a_string/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reverse a String</title>
+  <meta name="description" content="Reverse a srting solution" />
+  <meta name="keywords" content="Algorithms, Free Code Camp, JavaScript, Reverse a number" />
+  <meta name="author" content="Donald Brown" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/themes/prism-coy.min.css" integrity="sha256-VcuSs+n31yebPlEcehu6PvnidJ808ScFBsK8+tJKX+Q=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../../style.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
+  <link rel="stylesheet" href="../../styles/solutions.css">
+  <title>Reverse a String</title>
 </head>
 <body>
   <article class="solution-article">
