adds find the longest string

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./solutions/celcius_to_fahrenheit/">Convert Celcius to Fahrenheit</a></li>
         <li><a href="./solutions/reverse_a_string/">Reverse a String</a></li>
         <li><a href="./solutions/factorolize_a_number/">Factorialize a Number</a></li>
+        <li><a href="./solutions/longest_word_in_string/">Longest Word in a String</a></li>
       </ul>
     </article>
   </body>
