--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./solutions/reverse_a_string/">Reverse a String</a></li>
         <li><a href="./solutions/factorolize_a_number/">Factorialize a Number</a></li>
         <li><a href="./solutions/longest_word_in_string/">Longest Word in a String</a></li>
+        <li><a href="./solutions/largest_of_four/">Return Largest Numbers in Arrays</a></li>
       </ul>
     </article>
   </body>
