--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="./solutions/longest_word_in_string/">Longest Word in a String</a></li>
         <li><a href="./solutions/largest_of_four/">Return Largest Numbers in Arrays</a></li>
         <li><a href="./solutions/confirm_the_ending/">Confirm the Ending</a></li>
+        <li><a href="./solutions/repeat_a_string/">Repeat a String Repeat a String</a></li>
       </ul>
     </article>
   </body>
