--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <li><a href="./solutions/largest_of_four/">Return Largest Numbers in Arrays</a></li>
         <li><a href="./solutions/confirm_the_ending/">Confirm the Ending</a></li>
         <li><a href="./solutions/repeat_a_string/">Repeat a String Repeat a String</a></li>
+        <li><a href="./solutions/truncate_a_string/">Truncate a String</a></li>
+        <li><a href="./solutions/finders_keepers/">Finders Keepers</a></li>
+        <li><a href="./solutions/boo_who/">Boo Who</a></li>
+        <li><a href="./solutions/title_case_a_sentance/">Title Case a Sentance</a></li>
+        <li><a href="./solutions/slice_n_splice/">Slice and Splice</a></li>
+        <li><a href="./solutions/falsy_bouncer/">Falsy Bouncer</a></li>
+        <li><a href="./solutions/Where_do_I_belong/">Where Do I Belong</a></li>
+        <li><a href="./solutions/mutations/">Mutations</a></li>
+        <li><a href="./solutions/chuncky_monkey/">Chunkey Monkey</a></li>
       </ul>
     </article>
   </body>
